<resources>
    <string name="app_name">Chat App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_text">No account yet? sign up now!</string>
    <string name="name">Name</string>
    <string name="sign_in_text">Already have an account? sign in now!</string>
    <string name="otp">OTP</string>
    <string name="reset_password">reset password</string>
    <string name="sign_up">sign up</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="new_group">New Group</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="above">Above</string>
    <string name="supporters">Supporters</string>
    <string name="supporters_text">supporters_text</string>
    <string name="support">Support</string>
    <string name="support_text">support_text</string>
    <string name="developer">Developer</string>
    <string name="developer_name">developer_name</string>
    <string name="version">Version</string>
    <string name="version_num">version_num</string>
    <string name="user_name">User Name</string>
    <string name="default_status">Hello World</string>
</resources>