<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/newGroupOption"
        android:icon="@drawable/ic_person"
        android:title="@string/new_group"
        app:showAsAction="never"/>

    <item android:id="@+id/settingsOption"
        android:icon="@drawable/ic_person"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/shareOption"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item android:id="@+id/aboutOption"
        android:icon="@drawable/ic_person"
        android:title="@string/above"
        app:showAsAction="never"/>

</menu>